# co-intelligence

./: .gitignore  CLAUDE.md  README.md  config.local.yaml.example
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
agent/: SKILL.md
career/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md
career/career/: clean.py  links.py  models.py  render.py  sources.py
career/reference/: clean-mode.md  learning-loop.md  new-user-flow.md  update-phase.md
commands/: agent.md  autoresearch.md  bibliography.md  career.md  plugin-update.md  plugin.md  report.md  setup.md  skillsmith.md  update.md
data/skillsmith/: knowledge.md
hooks/: autoresearch-stop-hook.sh  hooks.json  session-start.sh
job-search/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SKILL.md  career-reference.md  clean-mode.md  deep-search-tactics.md  feedback_cv_honesty.md  learning-loop.md  new-user-flow.md  pyproject.toml  search-agents.md  sources-general.yaml  update-phase.md  update-user-flow.md
job-search/job_search/: clean.py  links.py  models.py  render.py  schedule.py  sources.py
job-search/job_search/templates/: base.html.j2  dashboard.html.j2  offers.html.j2  schedule.html.j2
job-search/reference/: clean-mode.md  comments-processing.md  deep-search-tactics.md  feedback_cv_honesty.md  learning-loop.md  new-user-flow.md  search-agents.md  update-phase.md
job-search/users/_example/: CV.md  Human-Expertise.md  Job-Search-Reference.md  Journal.md  goals.md  profile.yaml  sources.yaml
myplay/: SKILL.md
note/: SKILL.md
plugins/autoresearch/: LICENSE  README.md
plugins/caveman/: README.md  UPSTREAM.md  config.default.json  upstream.lock.json
plugins/caveman/hooks/: hooks.json  (+3 more)
plugins/karpathy/: LICENSE  README.md  upstream.lock.json
plugins/sound-notification/: README.md  config.default.json
plugins/stop-bell/: README.md
plugins/superpowers/: README.md  UPSTREAM.md  upstream.lock.json
references/: self-refinement.md
refine-skill/: SKILL.md  analysis.md  knowledge.md
refine-skill/history/: agent.md  job-search.md  note.md  refine-skill.md  report.md  setup.md  sync-skills.md  tidy-skills-repo.md
report/: SKILL.md
scripts/: check-consistency.sh  sync-upstream.js
setup/: SKILL.md  architecture.md
skills/agent/: SKILL.md
skills/autoresearch/: README.md  SKILL.md
skills/bibliography/: SKILL.md
skills/career/: SKILL.md  pyproject.toml  sources-general.yaml
skills/career/career/: schedule.py
skills/career/career/templates/: summary.html.j2
skills/career/reference/: clean-mode.md  comments-processing.md  deep-search-tactics.md  final-report.md  search-agents.md  search-dispatch.md  update-phase.md  update-user-flow.md
skills/career/templates/user-template/: archive.md  journal.md  profile.yaml
skills/plugin/: SKILL.md  check-publish.md  check-update.md  publish.sh  update.sh
skills/plugin-update/: SKILL.md  check.md  update.sh
skills/report/: SKILL.md
skills/setup/: SKILL.md  apply.md  bootstrap.md  edit.md
skills/skillsmith/: SKILL.md  analysis.md
skillsmith/: SKILL.md  analysis.md  knowledge.md
skillsmith/history/: career.md  job-search.md  myplay.md  refine-skill.md
sync-skills/: SKILL.md
templates/: config.local.yaml.example
(+67 files in other folders)
