[project]
name = "career"
version = "2.0.0"
description = "Claude Code skill for career management: job discovery, note capture, link validation, offer cleaning, dashboard rendering, and schedule planning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dimitris Klockenbring", email = "klockenbring@users.noreply.github.com" },
]
keywords = ["claude-code", "career", "job-search", "automation", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/5TuX/career-skill"
Repository = "https://github.com/5TuX/career-skill"
Issues = "https://github.com/5TuX/career-skill/issues"

[project.scripts]
career-render = "career.render:main"
career-validate-links = "career.links:main"
career-validate-sources = "career.sources:main"
career-clean = "career.clean:main"
career-schedule = "career.schedule:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
